[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "visread"
readme = "README.md"
dynamic = ["version"]
authors = [{name="Ian Czekala", email="ic95@st-andrews.ac.uk"}]
description="Tools to read and process interferometric visibilities from Measurement Sets"
requires-python = ">3.6"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["numpy", "scipy", "astropy"]

[project.optional-dependencies]
casa = ["casatools", "casadata", "casatasks"]
test = ["pytest", "matplotlib"]
docs = ["casatools", 
        "casadata", 
        "casatasks",
        "sphinx>=2.3.0",
        "nbsphinx",
        "sphinx_material",
        "sphinx_copybutton",
        "sphinx_book_theme>=0.9.3",
        "jupyter",
        "jupytext",
        "ipython!=8.7.0",  # broken version for syntax higlight https://github.com/spatialaudio/nbsphinx/issues/687
        "matplotlib",
        "myst-nb",
        "jupyter-cache",
        "pylint", 
        "black"]

[project.urls]
Homepage = "https://mpol-dev.github.io/visread/"
Issues = "https://github.com/MPoL-dev/visread/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/visread/visread_version.py"